<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/events_item_name"
        app:layout_constraintBottom_toTopOf="@+id/event_date"
        app:layout_constraintEnd_toStartOf="@+id/event_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/events_item_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/event_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <Button
        android:id="@+id/event_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_item_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>